2004-03-23  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>
        * pt_BR.po: Updated Brazilian Portuguese translation done by Luis
        Henrique Sestari Rocha <subdirect@bol.com.br>.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12812 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-23  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation done by Luis
+	Henrique Sestari Rocha <subdirect@bol.com.br>.
+
 2004-03-23  Abel Cheung  <maddog@linux.org.hk>
 
 	* zh_TW.po: Updated traditional Chinese translation.
