--- a/po-libgimp/pt_BR.po
+++ b/po-libgimp/pt_BR.po
@@ -3,27 +3,27 @@
 # This file is distributed under the same license as the gimp-libgimp package.
 # Marcia Norie Nakaza <norie@conectiva.com.br>, 2000.
 # Alexandre Folle de Menezes <afmenez@terra.com.br>, 2003.
-#
+# Luis Henrique Sestari Rocha <subdirect@bol.com.br>, 2004
 msgid ""
 msgstr ""
 "Project-Id-Version: gimp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-20 23:20+0100\n"
+"POT-Creation-Date: 2004-03-23 10:01-0500\n"
 "PO-Revision-Date: 2003-02-28 03:15-0300\n"
-"Last-Translator: Alexandre Folle de Menezes <afmenez@terra.com.br>\n"
+"Last-Translator: Luis Henrique Sestari Rocha <subdirect@bol.com.br>\n"
 "Language-Team: Brazilian Portuguese <gnome-l10n-br@listas.cipsga.org.br>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8-bit\n"
 
+# Revisado por Joao S. O. Bueno <gwidion@mpc.com.br>, em 23/03/2004
 #: libgimp/gimpbrushmenu.c:132
-#, fuzzy
 msgid "Brush Selection"
-msgstr "Seleção da Unidade"
+msgstr "Seleção de Pincel"
 
 #: libgimp/gimpbrushmenu.c:161 libgimp/gimppatternmenu.c:144
 msgid "_Browse..."
-msgstr ""
+msgstr "_Procurar"
 
 #: libgimp/gimpexport.c:215 libgimp/gimpexport.c:251
 #, c-format
@@ -42,7 +42,7 @@ msgstr "%s não pode tratar deslocamento, tamanho ou opacidade de camadas"
 #: libgimp/gimpexport.c:233 libgimp/gimpexport.c:242
 #, c-format
 msgid "%s can only handle layers as animation frames"
-msgstr "%s só pode tratar camadas como frames de animação"
+msgstr "%s só pode tratar camadas como quadros de animação"
 
 #: libgimp/gimpexport.c:234 libgimp/gimpexport.c:243
 msgid "Save as Animation"
@@ -50,7 +50,7 @@ msgstr "Salvar como animação"
 
 #: libgimp/gimpexport.c:243 libgimp/gimpexport.c:252 libgimp/gimpexport.c:261
 msgid "Flatten Image"
-msgstr "Imagem Achatada"
+msgstr "Achatadar Imagem"
 
 #: libgimp/gimpexport.c:260
 #, c-format
@@ -58,13 +58,13 @@ msgid "%s can't handle transparency"
 msgstr "%s não pode tratar transparência"
 
 #: libgimp/gimpexport.c:269
-#, fuzzy, c-format
+#, c-format
 msgid "%s can't handle layer masks"
-msgstr "%s não pode tratar camadas"
+msgstr "%s nÃo pode tratar máscaras de camada"
 
 #: libgimp/gimpexport.c:270
 msgid "Apply Layer Masks"
-msgstr ""
+msgstr "Aplicar Máscaras de Camada"
 
 #: libgimp/gimpexport.c:278
 #, c-format
@@ -78,11 +78,11 @@ msgstr "Converter para RGB"
 #: libgimp/gimpexport.c:287
 #, c-format
 msgid "%s can only handle grayscale images"
-msgstr "%s só pode tratar imagens na escala de cinza"
+msgstr "%s só pode tratar imagens escala de cinzas"
 
 #: libgimp/gimpexport.c:288 libgimp/gimpexport.c:317 libgimp/gimpexport.c:338
 msgid "Convert to Grayscale"
-msgstr "Converter para Escala de Cinza"
+msgstr "Converter para Escala de Cinzas"
 
 #: libgimp/gimpexport.c:296
 #, c-format
@@ -94,24 +94,21 @@ msgid ""
 "Convert to Indexed using default settings\n"
 "(Do it manually to tune the result)"
 msgstr ""
-"Converter para Indexado usando configurações\n"
-"padrão (faça manualmente para ajustar o\n"
-"resultado)"
+"Converter para Indexada usando configurações\n"
+"padrão (faça isso manualmente para ajustar oresultado)"
 
 #: libgimp/gimpexport.c:306
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle bitmap (two color) indexed images"
-msgstr "%s só pode tratar imagens RGB ou indexadas"
+msgstr "%s só pode tratar imagens bitmap (duas cores)³indexadas"
 
 #: libgimp/gimpexport.c:307
-#, fuzzy
 msgid ""
 "Convert to Indexed using bitmap default settings\n"
 "(Do it manually to tune the result)"
 msgstr ""
-"Converter para Indexado usando configurações\n"
-"padrão (faça manualmente para ajustar o\n"
-"resultado)"
+"Converter para Indexado usando configuração padrão de bitmap\n"
+"(faça isso manualmente para ajustar o resultado)"
 
 #: libgimp/gimpexport.c:316
 #, c-format
@@ -126,7 +123,7 @@ msgstr "%s só pode tratar imagens RGB ou indexadas"
 #: libgimp/gimpexport.c:335
 #, c-format
 msgid "%s can only handle grayscale or indexed images"
-msgstr "%s só pode tratar imagens na escala cinza ou indexadas"
+msgstr "%s só pode tratar imagens escala de cinzas ou indexadas"
 
 #: libgimp/gimpexport.c:346
 #, c-format
@@ -139,7 +136,7 @@ msgstr "Adicionar Canal Alfa"
 
 #: libgimp/gimpexport.c:382
 msgid "Confirm Save"
-msgstr "Confirmar Salvamento"
+msgstr "Confirmar Salvar"
 
 #: libgimp/gimpexport.c:388
 msgid "Confirm"
@@ -150,24 +147,22 @@ msgid "Export File"
 msgstr "Exportar Arquivo"
 
 #: libgimp/gimpexport.c:461
-#, fuzzy
 msgid "_Ignore"
-msgstr "Ignorar"
+msgstr "_Ignorar"
 
 #: libgimp/gimpexport.c:463
-#, fuzzy
 msgid "_Export"
-msgstr "Exportar"
+msgstr "_Exportar"
 
 #. the headline
 #: libgimp/gimpexport.c:485
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Your image should be exported before it can be saved as %s for the following "
 "reasons:"
 msgstr ""
-"Sua imagem deve ser exportada antes de poder ser salva, pelas razões a "
-"seguir:"
+"Sua imagem deve ser exportada antes de poder ser salva como %s, pelas "
+"razõesa seguir:"
 
 #: libgimp/gimpexport.c:563
 msgid "The export conversion won't modify your original image."
@@ -180,7 +175,7 @@ msgid ""
 "This will not save the visible layers."
 msgstr ""
 "Você está prestes a salvar uma máscara de camada como %s.\n"
-"Isso não salvará as camadas invisíveis."
+"Isso não salvará as camadas visíveis."
 
 #: libgimp/gimpexport.c:671
 #, c-format
@@ -192,23 +187,20 @@ msgstr ""
 "Isso não salvará as camadas visíveis."
 
 #: libgimp/gimpfontmenu.c:89
-#, fuzzy
 msgid "Font Selection"
-msgstr "Seleção da Unidade"
+msgstr "Seleção de Fonte"
 
 #: libgimp/gimpgradientmenu.c:103
-#, fuzzy
 msgid "Gradient Selection"
-msgstr "Seleção da Unidade"
+msgstr "Seleção de Degradê"
 
 #: libgimp/gimpmenu.c:407
 msgid "None"
 msgstr "Nenhum"
 
 #: libgimp/gimppatternmenu.c:115
-#, fuzzy
 msgid "Pattern Selection"
-msgstr "Seleção da Unidade"
+msgstr "Seleção de Textura"
 
 #: libgimp/gimpunitcache.c:57
 msgid "percent"
@@ -216,57 +208,57 @@ msgstr "porcento"
 
 #: libgimpbase/gimputils.c:161 libgimpbase/gimputils.c:166
 msgid "(invalid UTF-8 string)"
-msgstr ""
+msgstr "(string UTF-8 inválida)"
 
 #: libgimpbase/gimputils.c:244
-#, fuzzy, c-format
+#, c-format
 msgid "%d Bytes"
-msgstr "Bytes"
+msgstr "%d Bytes"
 
 #: libgimpbase/gimputils.c:249
 #, c-format
 msgid "%.2f KB"
-msgstr ""
+msgstr "%.2f KB"
 
 #: libgimpbase/gimputils.c:253
 #, c-format
 msgid "%.1f KB"
-msgstr ""
+msgstr "%.1f KB"
 
 #: libgimpbase/gimputils.c:257
 #, c-format
 msgid "%d KB"
-msgstr ""
+msgstr "%d KB"
 
 #: libgimpbase/gimputils.c:264
 #, c-format
 msgid "%.2f MB"
-msgstr ""
+msgstr "%.2f MB"
 
 #: libgimpbase/gimputils.c:268
 #, c-format
 msgid "%.1f MB"
-msgstr ""
+msgstr "%.1f MB"
 
 #: libgimpbase/gimputils.c:272
-#, fuzzy, c-format
+#, c-format
 msgid "%d MB"
-msgstr "Bytes"
+msgstr "%d MB"
 
 #: libgimpbase/gimputils.c:279
 #, c-format
 msgid "%.2f GB"
-msgstr ""
+msgstr "%.2f GB"
 
 #: libgimpbase/gimputils.c:283
 #, c-format
 msgid "%.1f GB"
-msgstr ""
+msgstr "%.1f GB"
 
 #: libgimpbase/gimputils.c:287
-#, fuzzy, c-format
+#, c-format
 msgid "%d GB"
-msgstr "Bytes"
+msgstr "%d GB"
 
 #: libgimpmodule/gimpmodule.c:177
 #, c-format
@@ -276,11 +268,9 @@ msgstr "Carregando módulo: '%s'\n"
 #: libgimpmodule/gimpmodule.c:194 libgimpmodule/gimpmodule.c:213
 #: libgimpmodule/gimpmodule.c:328 libgimpmodule/gimpmodule.c:356
 #: libgimpmodule/gimpmodule.c:450
-#, fuzzy, c-format
+#, c-format
 msgid "Module '%s' load error: %s"
-msgstr ""
-"Erro de carregamento do módulo '%s':\n"
-"%s"
+msgstr "Erro ao carregar módulo '%s': %s"
 
 #: libgimpmodule/gimpmodule.c:283
 #, c-format
@@ -306,27 +296,23 @@ msgstr "Não carregado"
 #: libgimpthumb/gimpthumb-utils.c:196
 #, c-format
 msgid "Failed to create thumbnail folder '%s'."
-msgstr ""
+msgstr "Falha ao criar diretório de miniaturas '%s'."
 
 #: libgimpwidgets/gimpcolorbutton.c:93
-#, fuzzy
 msgid "/_Foreground Color"
-msgstr "/Cor de Primeiro Plano"
+msgstr "/Cor de _Frente"
 
 #: libgimpwidgets/gimpcolorbutton.c:95
-#, fuzzy
 msgid "/_Background Color"
-msgstr "/Cor de Fundo"
+msgstr "/Cor de _Fundo"
 
 #: libgimpwidgets/gimpcolorbutton.c:98
-#, fuzzy
 msgid "/Blac_k"
-msgstr "/Preto"
+msgstr "/Pre_to"
 
 #: libgimpwidgets/gimpcolorbutton.c:100
-#, fuzzy
 msgid "/_White"
-msgstr "/Branco"
+msgstr "/_Branco"
 
 #: libgimpwidgets/gimpcolorscales.c:142
 msgid "Scales"
@@ -395,23 +381,23 @@ msgstr "Notação de cor hexadecimal, como a usada em HTML"
 
 #: libgimpwidgets/gimpcolorscales.c:268
 msgid "He_x Triplet:"
-msgstr "Tripla Hex:"
+msgstr "Tripla He_xa:"
 
 #: libgimpwidgets/gimpcolorselection.c:203
 msgid "Current:"
-msgstr ""
+msgstr "Atual:"
 
 #: libgimpwidgets/gimpcolorselection.c:225
 msgid "Old:"
-msgstr ""
+msgstr "Antiga:"
 
 #: libgimpwidgets/gimpfileentry.c:350
 msgid "Select Folder"
-msgstr "Selecionar pasta"
+msgstr "Selecionar Diretório"
 
 #: libgimpwidgets/gimpfileentry.c:364
 msgid "Select File"
-msgstr "Selecionar arquivo"
+msgstr "Selecionar Arquivo"
 
 #: libgimpwidgets/gimpmemsizeentry.c:234
 msgid "KiloBytes"
@@ -426,14 +412,12 @@ msgid "GigaBytes"
 msgstr "GigaBytes"
 
 #: libgimpwidgets/gimppatheditor.c:243
-#, fuzzy
 msgid "Writable"
-msgstr "_Triângulo"
+msgstr "Gravável"
 
 #: libgimpwidgets/gimppatheditor.c:252
-#, fuzzy
 msgid "Folder"
-msgstr "Selecionar pasta"
+msgstr "Diretório"
 
 #: libgimpwidgets/gimppickbutton.c:141
 msgid ""
@@ -533,14 +517,13 @@ msgstr ""
 
 #: libgimpwidgets/gimpwidgets.c:1295
 msgid "_New Seed"
-msgstr ""
+msgstr "_Nova Semente"
 
 #: libgimpwidgets/gimpwidgets.c:1308
 msgid "Seed random number generator with a generated random number"
-msgstr "Semear o gerador de números randômicos com o número randômico gerado"
+msgstr "Semear o gerador de números aleatórios com um número aleatório gerado"
 
 #: libgimpwidgets/gimpwidgets.c:1312
-#, fuzzy
 msgid "_Randomize"
 msgstr "_Randomizar"
 
@@ -554,9 +537,8 @@ msgid "Color Deficient Vision"
 msgstr "Visão com Deficiência de Cor"
 
 #: modules/cdisplay_colorblind.c:464
-#, fuzzy
 msgid "Color _Deficiency Type:"
-msgstr "Tipo de Deficiência de Cor:"
+msgstr "Tipo de _Deficiência de Cor:"
 
 #: modules/cdisplay_colorblind.c:473
 msgid "Protanopia (insensitivity to red)"
@@ -572,138 +554,130 @@ msgstr "Tritanopia (insensitividade ao azul)"
 
 #: modules/cdisplay_gamma.c:90
 msgid "Gamma color display filter"
-msgstr "Filtro de display de cores gama"
+msgstr "Filtro de cores na tela - Gama"
 
 #: modules/cdisplay_gamma.c:156
 msgid "Gamma"
 msgstr "Gama"
 
 #: modules/cdisplay_gamma.c:311
-#, fuzzy
 msgid "_Gamma:"
-msgstr "Gama:"
+msgstr "_Gama:"
 
 #: modules/cdisplay_highcontrast.c:90
 msgid "High Contrast color display filter"
-msgstr "Filtro de display de alto contraste"
+msgstr "Filtro de cores na tela de - Alto Contraste"
 
 #: modules/cdisplay_highcontrast.c:156
 msgid "Contrast"
 msgstr "Contraste"
 
 #: modules/cdisplay_highcontrast.c:308
-#, fuzzy
 msgid "Contrast C_ycles:"
-msgstr "Ciclos de Contraste"
+msgstr "C_iclos de Contraste"
 
 #: modules/cdisplay_proof.c:102
 msgid "Color proof filter using ICC color profile"
-msgstr ""
+msgstr "Filtro de prova de cores usando perfil de cor ICC"
 
 #: modules/cdisplay_proof.c:166
 msgid "Color Proof"
-msgstr ""
+msgstr "Prova de Cores"
 
 #: modules/cdisplay_proof.c:319
 msgid "Perceptual"
-msgstr ""
+msgstr "Perceptual"
 
 #: modules/cdisplay_proof.c:321
 msgid "Relative Colorimetric"
-msgstr ""
+msgstr "Colorimetria Relativa"
 
 #: modules/cdisplay_proof.c:325
 msgid "Absolute Colorimetric"
-msgstr ""
+msgstr "Colorimetria Absoluta"
 
 #: modules/cdisplay_proof.c:331
 msgid "_Intent:"
-msgstr ""
+msgstr "_Intenção:"
 
 #: modules/cdisplay_proof.c:334
 msgid "Choose an ICC Color Profile"
-msgstr ""
+msgstr "Escolha um perfil de cor ICC"
 
 #: modules/cdisplay_proof.c:337
 msgid "_Profile:"
-msgstr ""
+msgstr "_Perfil:"
 
 #: modules/cdisplay_proof.c:345
 msgid "_Black Point Compensation"
-msgstr ""
+msgstr "_Compensação de Ponto Negro"
 
 #: modules/colorsel_cmyk.c:73
-#, fuzzy
 msgid "CMYK color selector"
-msgstr "Seletor de cores estilo watercolor"
+msgstr "Seletor de cor CMYK"
 
 #: modules/colorsel_cmyk.c:132
 msgid "CMYK"
-msgstr ""
+msgstr "CMYK"
 
 #: modules/colorsel_cmyk.c:149
 msgid "_C"
-msgstr ""
+msgstr "_C"
 
 #: modules/colorsel_cmyk.c:150
 msgid "_M"
-msgstr ""
+msgstr "_M"
 
 #: modules/colorsel_cmyk.c:151
 msgid "_Y"
-msgstr ""
+msgstr "_Y"
 
 #: modules/colorsel_cmyk.c:152
 msgid "_K"
-msgstr ""
+msgstr "_K"
 
 #: modules/colorsel_cmyk.c:156
-#, fuzzy
 msgid "Cyan"
-msgstr "Cancelar"
+msgstr "Ciano"
 
 #: modules/colorsel_cmyk.c:157
 msgid "Magenta"
-msgstr ""
+msgstr "Magenta"
 
 #: modules/colorsel_cmyk.c:158
 msgid "Yellow"
-msgstr ""
+msgstr "Amarelo"
 
 #: modules/colorsel_cmyk.c:159
-#, fuzzy
 msgid "Black"
-msgstr "/Preto"
+msgstr "Preto"
 
 #: modules/colorsel_cmyk.c:193
 msgid "Black Pullout (%):"
-msgstr ""
+msgstr "Extração de Preto (%):"
 
 #: modules/colorsel_triangle.c:110
 msgid "Painter-style triangle color selector"
 msgstr "Seletor de cores no estilo de pintor"
 
 #: modules/colorsel_triangle.c:182
-#, fuzzy
 msgid "Triangle"
-msgstr "_Triângulo"
+msgstr "Triângulo"
 
 #: modules/colorsel_water.c:104
 msgid "Watercolor style color selector"
 msgstr "Seletor de cores estilo watercolor"
 
 #: modules/colorsel_water.c:176
-#, fuzzy
 msgid "Watercolor"
-msgstr "_Watercolor"
+msgstr "Watercolor"
 
 #: modules/colorsel_water.c:251
 msgid "Pressure"
 msgstr "Pressão"
 
-#, fuzzy
 #~ msgid "Parameter Settings"
-#~ msgstr "Seleção da Unidade"
+#~ msgstr "Configurações de Parâmetros"
 
 #~ msgid "None (normal vision)"
 #~ msgstr "Nenhuma (visão normal)"
