--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-23  Abel Cheung  <maddog@linux.org.hk>
+
+	* ja.po: Mark wrong entry as fuzzy (msgfmt check failed).
+
 2004-03-23  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation
