* zh_TW.po: Updated traditional Chinese translation.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12814 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,9 @@
 2004-03-23  Abel Cheung  <maddog@linux.org.hk>
 
+	* zh_TW.po: Updated traditional Chinese translation.
+
+2004-03-23  Abel Cheung  <maddog@linux.org.hk>
+
 	* ja.po: Mark wrong entry as fuzzy (msgfmt check failed).
 
 2004-03-23  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>
