2004-03-24  Sven Neumann  <sven@gimp.org>
	* fr.po: fixed a typo reported by Jean-Luc Coulon.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12823 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-24  Sven Neumann  <sven@gimp.org>
+
+	* fr.po: fixed a typo reported by Jean-Luc Coulon.
+
 2004-03-23  Abel Cheung  <maddog@linux.org.hk>
 
 	* zh_TW.po: Updated traditional Chinese translation.
