--- a/po/fr.po
+++ b/po/fr.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: gimp 2.0pre4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-03-23 16:10+0100\n"
-"PO-Revision-Date: 2004-03-06 13:53+0100\n"
+"PO-Revision-Date: 2004-03-24 14:34+0100\n"
 "Last-Translator: Christophe Merlet (RedFox) <redfox@redfoxcenter.org>\n"
 "Language-Team: GNOME French Team <gnomefr@traduc.org>\n"
 "MIME-Version: 1.0\n"
@@ -5706,7 +5706,7 @@ msgstr "_Interpolation par défaut :"
 #. Global Brush, Pattern, ...
 #: app/gui/preferences-dialog.c:1422
 msgid "Paint Options Shared Between Tools"
-msgstr "Options de painture partagées entre les outils"
+msgstr "Options de peinture partagées entre les outils"
 
 #: app/gui/preferences-dialog.c:1426
 msgid "_Brush"
