2004-03-24  Vincent van Adrighem  <adrighem@gnome.org>
	* nl.po: Translation updated by Branko Collin.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12824 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-24  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Branko Collin.
+
 2004-03-23  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation done by Luis
