--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-24  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Branko Collin.
+
 2004-03-24  Sven Neumann  <sven@gimp.org>
 
 	* fr.po: fixed a typo reported by Jean-Luc Coulon.
