--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-25  Tor Lillqvist  <tml@iki.fi>
+
+	* sv.po: Add a missing slash.
+
 2004-03-24  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Branko Collin.
