2004-03-25  Tor Lillqvist  <tml@iki.fi>
	* ms.po
	* pl.po: Fix minor syntax errors to silence GIMP.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12826 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/ms.po
+++ b/tips/ms.po
@@ -264,7 +264,7 @@ msgid ""
 msgstr ""
 "Anda boleh selaraskan dan gantikan pemilihan menggunakan <tt>ALt</tt>. Jika "
 "ini membuatkan tetingkap beralih, pengurus tetingkap anda telah menggunakan "
-"kekunci <tt>Alt</tt>. Cuba tekan <tt>Shift</t> pada masa yang sama."
+"kekunci <tt>Alt</tt>. Cuba tekan <tt>Shift</tt> pada masa yang sama."
 
 #: tips/gimp-tips.xml.in.h:25
 msgid ""
