--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-25  Tor Lillqvist  <tml@iki.fi>
+
+	* ms.po
+	* pl.po: Fix minor syntax errors to silence GIMP.
+
 2004-03-23  Abel Cheung  <maddog@linux.org.hk>
 
 	* zh_TW.po: Updated traditional Chinese translation.
