ru.po: Updated Russian translation from Russian team <gnome-cyr@gnome.org>.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12828 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-25  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
+
+	* ru.po: Updated Russian translation
+	from Russian team <gnome-cyr@gnome.org>.
+
 2004-03-23  Abel Cheung  <maddog@linux.org.hk>
 
 	* zh_TW.po: Updated traditional Chinese translation.
