--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-25  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
+
+	* ru.po: Updated Russian translation
+	from Russian team <gnome-cyr@gnome.org>.
+
 2004-03-24  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Branko Collin.
