--- a/po-libgimp/hu.po
+++ b/po-libgimp/hu.po
@@ -1,46 +1,46 @@
-# Hungarian translation of GIMP lib-gimp
-# Copyright (C) 2000 Free Software Foundation, Inc.
-# Andras TIMAR <timar@gnome.hu>, 2000.
+# Hungarian translation of gimp-libgimp.
+# Copyright (C) 2000-2004 Free Software Foundation, Inc.
+# Andras Timar <timar@gnome.hu>, 2000.
+# Laszlo Dvornik <dvornikl@mailbox.hu>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: GIMP libgimp /gnome-cvs\n"
+"Project-Id-Version: gimp-libgimp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-20 23:20+0100\n"
-"PO-Revision-Date: 2002-08-16 23:01+0200\n"
-"Last-Translator: Andras TIMAR <timar@gnome.hu>\n"
-"Language-Team: Hungarian <hu@gnome.hu>\n"
+"POT-Creation-Date: 2004-03-02 03:40+0100\n"
+"PO-Revision-Date: 2004-03-21 15:42+0100\n"
+"Last-Translator: Laszlo Dvornik <dvornikl@mailbox.hu>\n"
+"Language-Team: Hungarian <translation-team-hu@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: libgimp/gimpbrushmenu.c:132
-#, fuzzy
 msgid "Brush Selection"
-msgstr "Mértékegység választása"
+msgstr "Ecset kiválasztása"
 
 #: libgimp/gimpbrushmenu.c:161 libgimp/gimppatternmenu.c:144
 msgid "_Browse..."
-msgstr ""
+msgstr "_Tallózás..."
 
 #: libgimp/gimpexport.c:215 libgimp/gimpexport.c:251
-#, fuzzy, c-format
+#, c-format
 msgid "%s can't handle layers"
-msgstr "rétegeket nem kezeli"
+msgstr "%s nem kezeli a rétegeket"
 
 #: libgimp/gimpexport.c:216 libgimp/gimpexport.c:225 libgimp/gimpexport.c:234
 msgid "Merge Visible Layers"
 msgstr "Látható rétegek összefésülése"
 
 #: libgimp/gimpexport.c:224
-#, fuzzy, c-format
+#, c-format
 msgid "%s can't handle layer offsets, size or opacity"
-msgstr "nem kezeli a rétegeltolásokat, méretet és átlátszóságot"
+msgstr "%s nem kezeli a rétegeltolásokat, méretet és átlátszóságot"
 
 #: libgimp/gimpexport.c:233 libgimp/gimpexport.c:242
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle layers as animation frames"
-msgstr "a rétegeket csak animáció képkockájaként kezeli"
+msgstr "%s a rétegeket csak animáció képkockájaként kezeli"
 
 #: libgimp/gimpexport.c:234 libgimp/gimpexport.c:243
 msgid "Save as Animation"
@@ -51,42 +51,41 @@ msgid "Flatten Image"
 msgstr "Kép lapítása"
 
 #: libgimp/gimpexport.c:260
-#, fuzzy, c-format
+#, c-format
 msgid "%s can't handle transparency"
-msgstr "átlátszóságot nem kezeli"
+msgstr "%s nem kezeli az átlátszóságot"
 
 #: libgimp/gimpexport.c:269
-#, fuzzy, c-format
+#, c-format
 msgid "%s can't handle layer masks"
-msgstr "rétegeket nem kezeli"
+msgstr "%s nem kezeli a rétegmaszkokat"
 
 #: libgimp/gimpexport.c:270
-#, fuzzy
 msgid "Apply Layer Masks"
-msgstr "egy rétegmaszk"
+msgstr "Rétegmaszkok alkalmazása"
 
 #: libgimp/gimpexport.c:278
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle RGB images"
-msgstr "csak RGB képeket kezel"
+msgstr "%s csak RGB képeket kezel"
 
 #: libgimp/gimpexport.c:279 libgimp/gimpexport.c:317 libgimp/gimpexport.c:326
 msgid "Convert to RGB"
 msgstr "Átalakítás RGB-be"
 
 #: libgimp/gimpexport.c:287
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle grayscale images"
-msgstr "csak szürkeárnyalatos képeket kezel"
+msgstr "%s csak szürkeárnyalatos képeket kezel"
 
 #: libgimp/gimpexport.c:288 libgimp/gimpexport.c:317 libgimp/gimpexport.c:338
 msgid "Convert to Grayscale"
 msgstr "Átalakítás szürkeárnyalatosba"
 
 #: libgimp/gimpexport.c:296
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle indexed images"
-msgstr "csak indexelt képeket kezel"
+msgstr "%s csak indexelt képeket kezel"
 
 #: libgimp/gimpexport.c:297 libgimp/gimpexport.c:326 libgimp/gimpexport.c:336
 msgid ""
@@ -94,41 +93,38 @@ msgid ""
 "(Do it manually to tune the result)"
 msgstr ""
 "Átalakítás indexeltté az alapbeállítások használatával\n"
-"(A finomhangoláshoz válaszd a kézi beállítást)"
+"(A finomhangoláshoz válassza a kézi beállítást)"
 
 #: libgimp/gimpexport.c:306
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle bitmap (two color) indexed images"
-msgstr "csak RGB vagy indexelt képeket kezel"
+msgstr ""
 
 #: libgimp/gimpexport.c:307
-#, fuzzy
 msgid ""
 "Convert to Indexed using bitmap default settings\n"
 "(Do it manually to tune the result)"
 msgstr ""
-"Átalakítás indexeltté az alapbeállítások használatával\n"
-"(A finomhangoláshoz válaszd a kézi beállítást)"
 
 #: libgimp/gimpexport.c:316
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle RGB or grayscale images"
-msgstr "csak RGB vagy szürkeárnyalatos képeket kezel"
+msgstr "%s csak RGB vagy szürkeárnyalatos képeket kezel"
 
 #: libgimp/gimpexport.c:325
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle RGB or indexed images"
-msgstr "csak RGB vagy indexelt képeket kezel"
+msgstr "%s csak RGB vagy indexelt képeket kezel"
 
 #: libgimp/gimpexport.c:335
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle grayscale or indexed images"
-msgstr "csak szürkeárnyalatos vagy indexelt képeket kezel"
+msgstr "%s csak szürkeárnyalatos vagy indexelt képeket kezel"
 
 #: libgimp/gimpexport.c:346
-#, fuzzy, c-format
+#, c-format
 msgid "%s needs an alpha channel"
-msgstr "szükséges az alfa csatorna"
+msgstr "%s számára szükséges egy alfa csatorna"
 
 #: libgimp/gimpexport.c:347
 msgid "Add Alpha Channel"
@@ -147,64 +143,49 @@ msgid "Export File"
 msgstr "Fájl exportálása"
 
 #: libgimp/gimpexport.c:461
-#, fuzzy
 msgid "_Ignore"
-msgstr "Figyelmen kívül hagy"
+msgstr "_Figyelmen kívül hagy"
 
 #: libgimp/gimpexport.c:463
-#, fuzzy
 msgid "_Export"
-msgstr "Exportálás"
+msgstr "_Exportálás"
 
 #. the headline
 #: libgimp/gimpexport.c:485
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Your image should be exported before it can be saved as %s for the following "
 "reasons:"
-msgstr "A képet exportálni kellene mentés előtt a következő okból:"
+msgstr ""
+"A képet exportálni kellene, mielőtt %s néven mentésre kerülne a következő "
+"okból:"
 
 #: libgimp/gimpexport.c:563
 msgid "The export conversion won't modify your original image."
-msgstr ""
-"Az exportáláshoz szükséges átalakítások nem módosítják az eredeti képet."
-
-#: libgimp/gimpexport.c:665
-#, fuzzy, c-format
-msgid ""
-"You are about to save a layer mask as %s.\n"
-"This will not save the visible layers."
-msgstr ""
-"Arra készülsz, hogy %s-t %s-ként mentsd.\n"
-"Ez nem fogja menteni a látható rétegeket."
+msgstr "Az exportáláshoz szükséges átalakítások nem módosítják az eredeti képet."
 
 #: libgimp/gimpexport.c:671
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "You are about to save a channel (saved selection) as %s.\n"
 "This will not save the visible layers."
 msgstr ""
-"Arra készülsz, hogy %s-t %s-ként mentsd.\n"
-"Ez nem fogja menteni a látható rétegeket."
 
 #: libgimp/gimpfontmenu.c:89
-#, fuzzy
 msgid "Font Selection"
-msgstr "Mértékegység választása"
+msgstr "Betűkészlet kiválasztása"
 
 #: libgimp/gimpgradientmenu.c:103
-#, fuzzy
 msgid "Gradient Selection"
-msgstr "Mértékegység választása"
+msgstr "Színátmenet kiválasztása"
 
 #: libgimp/gimpmenu.c:407
 msgid "None"
 msgstr "Nincs"
 
 #: libgimp/gimppatternmenu.c:115
-#, fuzzy
 msgid "Pattern Selection"
-msgstr "Mértékegység választása"
+msgstr "Minta kiválasztása"
 
 #: libgimp/gimpunitcache.c:57
 msgid "percent"
@@ -212,62 +193,62 @@ msgstr "százalék"
 
 #: libgimpbase/gimputils.c:161 libgimpbase/gimputils.c:166
 msgid "(invalid UTF-8 string)"
-msgstr ""
+msgstr "(érvénytelen UTF-8 karakterlánc)"
 
 #: libgimpbase/gimputils.c:244
-#, fuzzy, c-format
+#, c-format
 msgid "%d Bytes"
-msgstr "bájt"
+msgstr "%d bájt"
 
 #: libgimpbase/gimputils.c:249
 #, c-format
 msgid "%.2f KB"
-msgstr ""
+msgstr "%.2f KB"
 
 #: libgimpbase/gimputils.c:253
 #, c-format
 msgid "%.1f KB"
-msgstr ""
+msgstr "%.1f KB"
 
 #: libgimpbase/gimputils.c:257
 #, c-format
 msgid "%d KB"
-msgstr ""
+msgstr "%d KB"
 
 #: libgimpbase/gimputils.c:264
 #, c-format
 msgid "%.2f MB"
-msgstr ""
+msgstr "%.2f MB"
 
 #: libgimpbase/gimputils.c:268
 #, c-format
 msgid "%.1f MB"
-msgstr ""
+msgstr "%.1f MB"
 
 #: libgimpbase/gimputils.c:272
-#, fuzzy, c-format
+#, c-format
 msgid "%d MB"
-msgstr "bájt"
+msgstr "%d MB"
 
 #: libgimpbase/gimputils.c:279
 #, c-format
 msgid "%.2f GB"
-msgstr ""
+msgstr "%.2f GB"
 
 #: libgimpbase/gimputils.c:283
 #, c-format
 msgid "%.1f GB"
-msgstr ""
+msgstr "%.1f GB"
 
 #: libgimpbase/gimputils.c:287
-#, fuzzy, c-format
+#, c-format
 msgid "%d GB"
-msgstr "bájt"
+msgstr "%d GB"
 
 #: libgimpmodule/gimpmodule.c:177
 #, c-format
 msgid "Loading module: '%s'\n"
-msgstr ""
+msgstr "Modul betöltése: '%s'\n"
 
 #: libgimpmodule/gimpmodule.c:194 libgimpmodule/gimpmodule.c:213
 #: libgimpmodule/gimpmodule.c:328 libgimpmodule/gimpmodule.c:356
@@ -279,110 +260,105 @@ msgstr ""
 #: libgimpmodule/gimpmodule.c:283
 #, c-format
 msgid "Skipping module: '%s'\n"
-msgstr ""
+msgstr "Modul kihagyása: '%s'\n"
 
 #: libgimpmodule/gimpmodule.c:424
 msgid "Module error"
-msgstr ""
+msgstr "Modul hiba"
 
 #: libgimpmodule/gimpmodule.c:425
 msgid "Loaded"
-msgstr ""
+msgstr "Betöltve"
 
 #: libgimpmodule/gimpmodule.c:426
 msgid "Load failed"
-msgstr ""
+msgstr "Sikertelen betöltés"
 
 #: libgimpmodule/gimpmodule.c:427
 msgid "Not loaded"
-msgstr ""
+msgstr "Nincs betöltve"
 
-#: libgimpthumb/gimpthumb-utils.c:196
+#: libgimpthumb/gimpthumb-utils.c:195
 #, c-format
 msgid "Failed to create thumbnail folder '%s'."
-msgstr ""
+msgstr "A(z) '%s' bélyegkép mappa létrehozása sikertelen."
 
 #: libgimpwidgets/gimpcolorbutton.c:93
-#, fuzzy
 msgid "/_Foreground Color"
-msgstr "/Előtérszín"
+msgstr "/_Előtérszín"
 
 #: libgimpwidgets/gimpcolorbutton.c:95
-#, fuzzy
 msgid "/_Background Color"
-msgstr "/Háttérszín"
+msgstr "/_Háttérszín"
 
 #: libgimpwidgets/gimpcolorbutton.c:98
-#, fuzzy
 msgid "/Blac_k"
-msgstr "/Fekete"
+msgstr "/_Fekete"
 
 #: libgimpwidgets/gimpcolorbutton.c:100
-#, fuzzy
 msgid "/_White"
-msgstr "/Fehér"
+msgstr "/F_ehér"
 
 #: libgimpwidgets/gimpcolorscales.c:142
-#, fuzzy
 msgid "Scales"
-msgstr "Átméretezés"
+msgstr ""
 
 #: libgimpwidgets/gimpcolorscales.c:164 libgimpwidgets/gimpcolorselect.c:353
 msgid "_H"
-msgstr ""
+msgstr "_H"
 
 #: libgimpwidgets/gimpcolorscales.c:165 libgimpwidgets/gimpcolorselect.c:353
 msgid "_S"
-msgstr ""
+msgstr "_S"
 
 #: libgimpwidgets/gimpcolorscales.c:166 libgimpwidgets/gimpcolorselect.c:353
 msgid "_V"
-msgstr ""
+msgstr "_V"
 
 #: libgimpwidgets/gimpcolorscales.c:167 libgimpwidgets/gimpcolorselect.c:353
 msgid "_R"
-msgstr ""
+msgstr "_R"
 
 #: libgimpwidgets/gimpcolorscales.c:168 libgimpwidgets/gimpcolorselect.c:353
 msgid "_G"
-msgstr ""
+msgstr "_G"
 
 #: libgimpwidgets/gimpcolorscales.c:169 libgimpwidgets/gimpcolorselect.c:353
 msgid "_B"
-msgstr ""
+msgstr "_B"
 
 #: libgimpwidgets/gimpcolorscales.c:170
 msgid "_A"
-msgstr ""
+msgstr "_A"
 
 #: libgimpwidgets/gimpcolorscales.c:174 libgimpwidgets/gimpcolorselect.c:357
 msgid "Hue"
-msgstr ""
+msgstr "Színezet"
 
 #: libgimpwidgets/gimpcolorscales.c:175 libgimpwidgets/gimpcolorselect.c:358
 #: modules/cdisplay_proof.c:323
 msgid "Saturation"
-msgstr ""
+msgstr "Telítettség"
 
 #: libgimpwidgets/gimpcolorscales.c:176 libgimpwidgets/gimpcolorselect.c:359
 msgid "Value"
-msgstr ""
+msgstr "Érték"
 
 #: libgimpwidgets/gimpcolorscales.c:177 libgimpwidgets/gimpcolorselect.c:360
 msgid "Red"
-msgstr ""
+msgstr "Vörös"
 
 #: libgimpwidgets/gimpcolorscales.c:178 libgimpwidgets/gimpcolorselect.c:361
 msgid "Green"
-msgstr ""
+msgstr "Zöld"
 
 #: libgimpwidgets/gimpcolorscales.c:179 libgimpwidgets/gimpcolorselect.c:362
 msgid "Blue"
-msgstr ""
+msgstr "Kék"
 
 #: libgimpwidgets/gimpcolorscales.c:180 libgimpwidgets/gimpcolorselect.c:363
 msgid "Alpha"
-msgstr ""
+msgstr "Alfa"
 
 #: libgimpwidgets/gimpcolorscales.c:254
 msgid "Hexadecimal color notation as used in HTML"
@@ -394,11 +370,11 @@ msgstr ""
 
 #: libgimpwidgets/gimpcolorselection.c:203
 msgid "Current:"
-msgstr ""
+msgstr "Jelenlegi:"
 
 #: libgimpwidgets/gimpcolorselection.c:225
 msgid "Old:"
-msgstr ""
+msgstr "Régi:"
 
 #: libgimpwidgets/gimpfileentry.c:350
 msgid "Select Folder"
@@ -420,15 +396,6 @@ msgstr "megabájt"
 msgid "GigaBytes"
 msgstr "gigabájt"
 
-#: libgimpwidgets/gimppatheditor.c:243
-msgid "Writable"
-msgstr ""
-
-#: libgimpwidgets/gimppatheditor.c:252
-#, fuzzy
-msgid "Folder"
-msgstr "Mappa kiválasztása"
-
 #: libgimpwidgets/gimppickbutton.c:141
 msgid ""
 "Click the eyedropper, then click a color anywhere on your screen to select "
@@ -440,14 +407,12 @@ msgid "Anchor"
 msgstr "Horgony"
 
 #: libgimpwidgets/gimpstock.c:114
-#, fuzzy
 msgid "_Duplicate"
-msgstr "Kettőzés"
+msgstr "_Kettőzés"
 
 #: libgimpwidgets/gimpstock.c:115
-#, fuzzy
 msgid "_Edit"
-msgstr "Szerkesztés"
+msgstr "S_zerkesztés"
 
 #: libgimpwidgets/gimpstock.c:116
 msgid "Linked"
@@ -478,33 +443,28 @@ msgid "L_ine Spacing"
 msgstr ""
 
 #: libgimpwidgets/gimpstock.c:184
-#, fuzzy
 msgid "_Resize"
-msgstr "_Alapértékek"
+msgstr "Átmé_retezés"
 
 #: libgimpwidgets/gimpstock.c:185 libgimpwidgets/gimpstock.c:284
-#, fuzzy
 msgid "_Scale"
-msgstr "Átméretezés"
+msgstr ""
 
 #: libgimpwidgets/gimpstock.c:263
 msgid "Crop"
-msgstr ""
+msgstr "Kivágás"
 
 #: libgimpwidgets/gimpstock.c:280
-#, fuzzy
 msgid "_Transform"
-msgstr "Átalakítás"
+msgstr "_Átalakítás"
 
 #: libgimpwidgets/gimpstock.c:283
-#, fuzzy
 msgid "_Rotate"
-msgstr "Forgatás"
+msgstr "_Forgatás"
 
 #: libgimpwidgets/gimpstock.c:285
-#, fuzzy
 msgid "_Shear"
-msgstr "Nyírás"
+msgstr "_Nyírás"
 
 #: libgimpwidgets/gimpunitmenu.c:304
 msgid "More..."
@@ -512,7 +472,7 @@ msgstr "Egyéb..."
 
 #: libgimpwidgets/gimpunitmenu.c:614
 msgid "Unit Selection"
-msgstr "Mértékegység választása"
+msgstr "Mértékegység kiválasztása"
 
 #: libgimpwidgets/gimpunitmenu.c:657
 msgid "Unit"
@@ -522,29 +482,24 @@ msgstr "Mértékegység"
 msgid "Factor"
 msgstr "Szorzó"
 
-#: libgimpwidgets/gimpwidgets.c:1291
-#, fuzzy
+#: libgimpwidgets/gimpwidgets.c:1271
 msgid ""
 "Use this value for random number generator seed - this allows you to repeat "
 "a given \"random\" operation"
 msgstr ""
-"Ha az \"Idő\" gomb nincs lenyomva, ezt a számot használja a véletlenszám-"
-"generálás kiindulópontjaként. Így az adott \"véletlen\" sorozat "
-"megismételhető."
+"Ezt a számot használja a véletlenszám-generálás kiindulópontjaként. Így az "
+"adott \"véletlen\" sorozat megismételhető."
 
-#: libgimpwidgets/gimpwidgets.c:1295
+#: libgimpwidgets/gimpwidgets.c:1275
 msgid "_New Seed"
 msgstr ""
 
-#: libgimpwidgets/gimpwidgets.c:1308
-#, fuzzy
+#: libgimpwidgets/gimpwidgets.c:1288
 msgid "Seed random number generator with a generated random number"
 msgstr ""
-"A véletlenszám-generálás kiindulópontja a pontos idő, ez garantálja a "
-"megfelelő véletlenséget."
 
-#: libgimpwidgets/gimpwidgets.c:1312
-msgid "_Randomize"
+#: libgimpwidgets/gimpwidgets.c:1292
+msgid "Randomize"
 msgstr ""
 
 #: modules/cdisplay_colorblind.c:124
@@ -577,11 +532,11 @@ msgstr ""
 
 #: modules/cdisplay_gamma.c:156
 msgid "Gamma"
-msgstr ""
+msgstr "Gamma"
 
 #: modules/cdisplay_gamma.c:311
 msgid "_Gamma:"
-msgstr ""
+msgstr "_Gamma:"
 
 #: modules/cdisplay_highcontrast.c:90
 msgid "High Contrast color display filter"
@@ -589,7 +544,7 @@ msgstr ""
 
 #: modules/cdisplay_highcontrast.c:156
 msgid "Contrast"
-msgstr ""
+msgstr "Kontraszt"
 
 #: modules/cdisplay_highcontrast.c:308
 msgid "Contrast C_ycles:"
@@ -621,11 +576,11 @@ msgstr ""
 
 #: modules/cdisplay_proof.c:334
 msgid "Choose an ICC Color Profile"
-msgstr ""
+msgstr "Válasszon egy ICC színprofilt"
 
 #: modules/cdisplay_proof.c:337
 msgid "_Profile:"
-msgstr ""
+msgstr "_Profil:"
 
 #: modules/cdisplay_proof.c:345
 msgid "_Black Point Compensation"
@@ -633,45 +588,43 @@ msgstr ""
 
 #: modules/colorsel_cmyk.c:73
 msgid "CMYK color selector"
-msgstr ""
+msgstr "CMYK színválasztó"
 
 #: modules/colorsel_cmyk.c:132
 msgid "CMYK"
-msgstr ""
+msgstr "CMYK"
 
 #: modules/colorsel_cmyk.c:149
 msgid "_C"
-msgstr ""
+msgstr "_C"
 
 #: modules/colorsel_cmyk.c:150
 msgid "_M"
-msgstr ""
+msgstr "_M"
 
 #: modules/colorsel_cmyk.c:151
 msgid "_Y"
-msgstr ""
+msgstr "_Y"
 
 #: modules/colorsel_cmyk.c:152
 msgid "_K"
-msgstr ""
+msgstr "_K"
 
 #: modules/colorsel_cmyk.c:156
-#, fuzzy
 msgid "Cyan"
-msgstr "Mégsem"
+msgstr "Ciánkék"
 
 #: modules/colorsel_cmyk.c:157
 msgid "Magenta"
-msgstr ""
+msgstr "Bíborvörös"
 
 #: modules/colorsel_cmyk.c:158
 msgid "Yellow"
-msgstr ""
+msgstr "Sárga"
 
 #: modules/colorsel_cmyk.c:159
-#, fuzzy
 msgid "Black"
-msgstr "/Fekete"
+msgstr "Fekete"
 
 #: modules/colorsel_cmyk.c:193
 msgid "Black Pullout (%):"
@@ -679,11 +632,11 @@ msgstr ""
 
 #: modules/colorsel_triangle.c:110
 msgid "Painter-style triangle color selector"
-msgstr ""
+msgstr "Painter stílusú háromszög színválasztó"
 
 #: modules/colorsel_triangle.c:182
 msgid "Triangle"
-msgstr ""
+msgstr "Háromszög"
 
 #: modules/colorsel_water.c:104
 msgid "Watercolor style color selector"
@@ -695,45 +648,4 @@ msgstr ""
 
 #: modules/colorsel_water.c:251
 msgid "Pressure"
-msgstr ""
-
-#, fuzzy
-#~ msgid "Parameter Settings"
-#~ msgstr "Mértékegység választása"
-
-#~ msgid "a channel (saved selection)"
-#~ msgstr "egy csatorna (mentett kijelölés)"
-
-#~ msgid "_Time"
-#~ msgstr "_Idő"
-
-#~ msgid "pixel"
-#~ msgstr "képpont"
-
-#~ msgid "pixels"
-#~ msgstr "képpont"
-
-#~ msgid "inches"
-#~ msgstr "hüvelyk"
-
-#~ msgid "millimeter"
-#~ msgstr "milliméter"
-
-#~ msgid "millimeters"
-#~ msgstr "milliméter"
-
-#~ msgid "point"
-#~ msgstr "pont"
-
-#~ msgid "points"
-#~ msgstr "pont"
-
-#~ msgid "picas"
-#~ msgstr "pica"
-
-#, fuzzy
-#~ msgid "Select Directory"
-#~ msgstr "Fájl kijelölése"
-
-#~ msgid "OK"
-#~ msgstr "OK"
+msgstr "Nyomás"
