2004-03-25  Michael Natterer  <mitch@gimp.org>
	* app/tools/gimpvectortool.c (gimp_vector_tool_button_release):
	fixed condition which triggers the path tool's undo hack.  Fixes
	bug #138086. Also g_object_unref() the undo step.

	Removed trailing whitespace.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12830 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-03-25  Michael Natterer  <mitch@gimp.org>
+
+	* app/tools/gimpvectortool.c (gimp_vector_tool_button_release):
+	fixed condition which triggers the path tool's undo hack.  Fixes
+	bug #138086. Also g_object_unref() the undo step.
+
+	Removed trailing whitespace.
+
 2004-03-25  Manish Singh  <yosh@gimp.org>
 
 	* libgimp/gimp.c
