--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-25  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated Korean translation by Dongsu Jang
+	<iolo@hellocity.net>.
+
 2004-03-25  Andras Timar  <timar@gnome.hu>
 
 	* hu.po: Updated Hungarian translation.
