--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-03-25  Michael Natterer  <mitch@gimp.org>
 
+	* app/base/tile-manager.c (tile_manager_new): g_return_if_fail()
+	on width, height or bpp <= 0. Doesn't fix anything but badly
+	warns (and helps debugging) on bug #138117.
+
+2004-03-25  Michael Natterer  <mitch@gimp.org>
+
 	* app/tools/gimpvectortool.c (gimp_vector_tool_button_release):
 	fixed condition which triggers the path tool's undo hack.  Fixes
 	bug #138086. Also g_object_unref() the undo step.
